@@ -2,5 +2,6 @@
 <linker>
 	<assembly fullname="smcs">
 		<type fullname="Mono.CompilerServices.SymbolWriter.MonoDebuggerSupport" />
+		<type fullname="Mono.CSharp.CompilerCallableEntryPoint" />
 	</assembly>
 </linker>
