@@ -27,8 +27,12 @@ LOCAL_MCS_FLAGS = -r:$(LINKER) -r:Mono.Cecil.dll
 
 DISTFILES = README $(TUNER_SOURCES) $(TUNER_DESCS) $(TUNER_MASTERS)
 
-WORKING_DIR = $(topdir)/class/lib/net_2_1
-OUTPUT_DIR = $(topdir)/class/lib/net_2_1_tuned
+WORKING_DIR = $(topdir)/class/lib/net_2_1_raw
+OUTPUT_DIR = $(topdir)/class/lib/net_2_1
+
+FILES = smcs.exe mscorlib.dll System.dll System.Xml.Core.dll System.Core.dll
+WORKING_FILES = $(FILES:%=$(WORKING_DIR)/%)
+OUTPUT_FILES = $(FILES:%=$(OUTPUT_DIR)/%)
 
 ifneq (net_2_1, $(PROFILE))
 all-local: Mono.Tuner.dll
@@ -39,12 +43,12 @@ clean-local:
 	rm -f *.dll *.mdb *.pdb
 
 else
-all-local: tune
+all-local: $(OUTPUT_FILES)
 
 install-local: end-install
 
 clean-local:
-	rm -rf $(OUTPUT_DIR)
+	rm -f $(OUTPUT_FILES) tune.stamp tune.stampt
 
 endif
 
@@ -52,9 +56,7 @@ uninstall-local:
 
 dist-local: dist-default
 
-test-local:
-
-run-test-local run-test-ondotnet-local:
+test-local run-test-local run-test-ondotnet-local:
 
 TUNER_FLAGS = -d $(WORKING_DIR) -o $(OUTPUT_DIR)	\
 	-l none		\
@@ -70,25 +72,32 @@ TUNER_STEPS = \
 	Mono.Tuner.RemoveSerialization,Mono.Tuner:OutputStep	\
 	Mono.Tuner.CheckVisibility,Mono.Tuner	\
 
-tune:
+$(OUTPUT_DIR)/.stamp:
+	$(MKINSTALLDIRS) $(@D)
+	touch $@
+
+$(OUTPUT_FILES): tune.stamp
+	test -f $@ || { rm -f $<; $(MAKE) $<; }
+
+tune.stamp: $(WORKING_FILES) $(OUTPUT_DIR)/.stamp
+	touch $@t
 	MONO_PATH=".$(PLATFORM_PATH_SEPARATOR)$(topdir)/class/lib/default$(PLATFORM_PATH_SEPARATOR)$$MONO_PATH" $(RUNTIME) $(RUNTIME_FLAGS) --debug $(LINKER) $(TUNER_FLAGS) $(TUNER_DESCS:%=-x %) $(TUNER_STEPS:%=-s %) $(TUNER_MASTERS:%=-i %)
+	mv $@t $@
 
 gacutil = $(topdir)/class/lib/net_1_1_bootstrap/gacutil.exe
 GACUTIL = MONO_PATH="$(topdir)/class/lib/net_1_1_bootstrap$(PLATFORM_PATH_SEPARATOR)$$MONO_PATH" $(RUNTIME) $(RUNTIME_FLAGS) $(gacutil)
 
 TUNER_INSTALL_DIR = $(DESTDIR)$(mono_libdir)/mono/2.1
 
-end-install: check-install-dir inst-mscorlib.dll inst-smcs.exe gac-System gac-System.Xml.Core gac-System.Core
+end-install: inst-mscorlib.dll inst-smcs.exe gac-System gac-System.Xml.Core gac-System.Core
 
-check-install-dir:
-	[ -d $(TUNER_INSTALL_DIR) ] || mkdir $(TUNER_INSTALL_DIR)
-
-inst-%:
+inst-%: %
+	$(MKINSTALLDIRS) $(TUNER_INSTALL_DIR)
 	$(INSTALL_LIB) $(OUTPUT_DIR)/$* $(TUNER_INSTALL_DIR)/$*
 	test ! -f $(OUTPUT_DIR)/$*.mdb || $(INSTALL_LIB) $(OUTPUT_DIR)/$*.mdb $(TUNER_INSTALL_DIR)/$*.mdb
 
-gac-%:
+gac-%: %.dll
 	$(GACUTIL) /i $(OUTPUT_DIR)/$*.dll /f /root $(DESTDIR)$(mono_libdir) /package 2.1
 
-Mono.Tuner.dll:
+Mono.Tuner.dll: $(TUNER_SOURCES)
 	$(CSCOMPILE) /out:Mono.Tuner.dll /t:library $(TUNER_SOURCES)
